--- a/Bullseye/Info.plist
+++ b/Bullseye/Info.plist
@@ -13,7 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+    <string>Bull's Eye </string>
+
+<!--    <string>$(PRODUCT_NAME)</string>-->
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
