--- a/Bullseye/Info.plist
+++ b/Bullseye/Info.plist
@@ -14,8 +14,7 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
     <string>Bull's Eye </string>
-
-<!--    <string>$(PRODUCT_NAME)</string>-->
+    <string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
